--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -40,6 +40,7 @@ $header-height: 80px;
 $border-radius-global: 5px;
 $wrapper: 1040px;
 $popup-wrapper: 800px;
+$popup-inner-side-padding: 24px;
 
 // TRANSITION
 $transition-global: all 150ms ease-in-out !default;
